WebCore/bindings/v8/V8Proxy.cpp
@@ -704,6 +704,16 @@ v8::Handle<v8::Value> V8Proxy::throwError(ErrorType type, const char* message)
     }
 }
 
+v8::Handle<v8::Value> V8Proxy::throwTypeError()
+{
+    return throwError(TypeError, "Type error");
+}
+
+v8::Handle<v8::Value> V8Proxy::throwSyntaxError()
+{
+    return throwError(SyntaxError, "Syntax error");
+}
+
 v8::Local<v8::Context> V8Proxy::context(Frame* frame)
 {
     v8::Local<v8::Context> context = V8Proxy::mainWorldContext(frame);
